--- a/resources/sass/components/switch.scss
+++ b/resources/sass/components/switch.scss
@@ -1,5 +1,5 @@
 $custom-control-description-disabled-color: #868e96;
-
+$custom-control-indicator-disabled-bg: transparent;
 //
 // These variables can be used to customize the switch component.
 //
